k8s/stage/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugin
  namespace: tekst-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hugin
  template:
    metadata:
      labels:
        app: hugin
    spec:
      containers:
        - name: hugin
          image: harbor.nb.no/tekst/hugin:<version>
          ports:
            - name: app-port
              containerPort: 8000
          imagePullPolicy: Always
