k8s/stage/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugin-ingress
  namespace: tekst-stage
spec:
  rules:
    - host: <host_url>
      http:
        paths:
          - path: /hugin
            pathType: Prefix
            backend:
              service:
                name: hugin-service
                port:
                  number: 8000
